AMBARI-25618. Ambari upgrade stuck while upgrading the schema. (dvitiuk)